--- a/GSMP.csproj
+++ b/GSMP.csproj
@@ -8,6 +8,12 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Content\Items\ExampleInstancedItem.cs.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Content\Items\ExampleInstancedItem.cs.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
 </Project>
