More progress on BaseMagicItem cus it got broken to shit with new tmod update on instances

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ obj/project.nuget.cache
 bin/Debug/net6.0/tModLoader.xml
 bin/Debug/net6.0/tModLoader.pdb
 bin/Debug/net6.0/tModLoader.dll
+.vs/GSMP/v17/.futdcache.v1
