--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ bin/Debug/net6.0/tModLoader.xml
 bin/Debug/net6.0/tModLoader.pdb
 bin/Debug/net6.0/tModLoader.dll
 .vs/GSMP/v17/.futdcache.v1
+icon.pdn
