Created Spells data and saving
made 3 new TagSerializables for Spell, 1D Spell arrays and 2D Spell arrays for tag saving.

Added SpellAsAnItem, used to save spell data and place spell tiles in allowed locations

Temporarily disabled BaseMagicItem and FormationStandTile

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ bin/Debug/net6.0/tModLoader.pdb
 bin/Debug/net6.0/tModLoader.dll
 .vs/GSMP/v17/.futdcache.v1
 icon.pdn
+DataStructures/new 1.cs
+DataStructures/BaseMagicItem.cs
